tests/compile-fail/integration_suite__integration__general__func_nonconst_string.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:25:9
   │
25 │         string foo() { return "hi"; }
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not supported by ANM files


